--- a/.github/workflows/signin.yml
+++ b/.github/workflows/signin.yml
@@ -13,5 +13,5 @@ jobs:
       - uses: ImYrS/aliyun-auto-signin@main
         with:
           REFRESH_TOKENS: ${{ secrets.REFRESH_TOKENS }}
-          PUSH_TYPES: 'ServerChan'
+          PUSH_TYPES: 'serverchan'
           SERVERCHAN_SEND_KEY: ${{ secrets.SERVERCHAN_SEND_KEY }}
