--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,3 +16,14 @@ jobs:
           PUSH_TYPES: 'serverchan'
           SERVERCHAN_SEND_KEY: ${{ secrets.SERVERCHAN_SEND_KEY }}
           GITHUB_P_TOKEN: ${{GITHUB_P_TOKEN}}
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+      - name: test
+        shell: bash
+        run: python main.py
+        env:
+          REFRESH_TOKENS: ${{ secrets.REFRESH_TOKENS }}
+
+        
