--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,9 +1,9 @@
 name: Aliyun Signin TEST
 
 on:
-  schedule:
+  # schedule:
    # 每天国际时间 17:20 运行一次, 中国时间 01:20
-    - cron: '20 17 * * *'
+    # - cron: '20 17 * * *'
   workflow_dispatch:
 jobs:
   signin:
