--- a/.github/workflows/signin.yml
+++ b/.github/workflows/signin.yml
@@ -15,3 +15,12 @@ jobs:
           REFRESH_TOKENS: ${{ secrets.REFRESH_TOKENS }}
           PUSH_TYPES: 'serverchan'
           SERVERCHAN_SEND_KEY: ${{ secrets.SERVERCHAN_SEND_KEY }}
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+      - name: test
+        shell: bash
+        run: python main.py
+        env:
+          REFRESH_TOKENS: ${{ secrets.REFRESH_TOKENS }}
